# consensus-hardening-protocol

./: .gitignore  CHP_DEMO_VIDEO.md  DEMO_SCRIPT.md  README.md  RELEASE_NOTES_CHP.md  chp_harden_remote.py  chp_hardener.py  chp_hardening_log.jsonl  chp_repo_manifest.json  chp_superserve.py  codeberg_final_fix.sh  consensus-hardening-protocol-deck.html  convergence-ref-source.txt  convergence-ref-tests.txt  create_update_payload.py  index.html  pyproject.toml  seed_all_databases.py  worklog.md
courtvision-ai/: .gitignore  README.md  create_demo.py
db/: custom.db
docs/: CHP_FINANCE_PROJECT_ROADMAP.md  cubiczan_repo_classification_batch3.json  gemma4-challenge-submission.md
download/: build-video.py  codeberg_all_repos.json  codeberg_repos.json  codeberg_repos_p2.json  consolidate_all.sh  convergence-dashboard-demo.webm  forge_finance_search.json  forge_search.json  gemma4-challenge-submission.md  merge_duplicates.sh  push_codeberg_chp.sh
examples/: ap_invoices_sample.csv  basic_demo.py  board_report_sample.json  chp_demo_partner_packet.txt  chp_demo_video.sh  investment_committee_sample.json  saas_dashboard_actuals.csv  saas_dashboard_budget.csv  saas_mrr_history.csv  variance_studio_sample.csv
finflowrl/: .gitignore  LICENSE  README.md  pyproject.toml
finflowrl/.chp/: ADVERSARIAL_PROMPTS.md  CHP_COMPLIANCE.md  R0_CONFIG.yaml  STATE_MACHINE.md
finflowrl/scripts/: demo.py  evaluate.py  generate_data.py  train.py
finflowrl/src/finflowrl/: __init__.py
finflowrl/src/finflowrl/agents/: __init__.py  ppo.py
finflowrl/src/finflowrl/config/: settings.py
finflowrl/src/finflowrl/envs/: __init__.py  hft_env.py
finflowrl/src/finflowrl/evaluation/: __init__.py  metrics.py
finflowrl/src/finflowrl/experts/: __init__.py  avellaneda_stoikov.py  glft.py  glft_drift.py
finflowrl/src/finflowrl/models/: __init__.py  film.py  meanflow.py  noise.py
finflowrl/src/finflowrl/simulator/: __init__.py  market.py
finflowrl/src/finflowrl/training/: __init__.py  finetune.py  pretrain.py
finflowrl/tests/: run_all.py  test_basic.py  test_config.py  test_env.py  test_experts.py  test_metrics.py  test_models.py  test_ppo.py  test_pretrain.py  test_simulator.py
greenverify-ai/: .gitignore  README.md
tests/: test_ap_optimizer.py  test_basic.py  test_board_reporting.py  test_cashflow_13w.py  test_cfo_os.py  test_chp_basics.py  test_chp_capital_flow.py  test_chp_contracts_and_guard.py  test_chp_registry_cli_flow.py  test_decision_impact_simulator.py  test_investment_committee.py  test_mesh.py  test_saas_kpi_dashboard.py  test_saas_operating_model.py  (+1 more)
(+112 files in other folders)
