[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-mesh-orchestrator"
version = "0.1.0"
description = "Cognitive Mesh Enterprise Orchestrator — multi-agent coordination for enterprise AI systems."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "zan-maker"}]
license = {text = "MIT"}
keywords = ["ai", "agents", "orchestration", "context-engineering", "multi-agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "cubiczan-resilience @ git+https://github.com/icohangar-ops/cubiczan-resilience.git#subdirectory=python",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cme = "cme.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cme*", "demo*"]
