[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finflowrl"
version = "0.1.0"
description = "Flow-Matching Reinforcement Learning for High-Frequency Trading"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "FinFlowRL Team"}
]
keywords = ["reinforcement-learning", "flow-matching", "high-frequency-trading", "market-making", "hft"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21",
    "pyyaml>=6.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
viz = ["matplotlib>=3.5"]

[project.scripts]
finflowrl-train = "scripts.train:main"
finflowrl-eval = "scripts.evaluate:main"
finflowrl-demo = "scripts.demo:main"
finflowrl-data = "scripts.generate_data:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
